--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
       width: 100%;
       border: none;
     }
+    
+    #bare-fc-holder {
+      position: absolute;
+      top: 0;
+      height: 100%;
+      width: 100%;
+      right: 0;
+    }
     </style>
     <title>Alternate Publisher Friendlycode Editor</title>
     <link rel="stylesheet" href="css/friendlycode.css">
@@ -101,6 +109,12 @@
       var onButterReady = function(butter, butterWindow, iframe) {
         var tray = butterWindow.document.querySelector(".butter-tray");
         iframe.style.height = tray.offsetHeight + "px";
+        var fcHolder = document.getElementById("bare-fc-holder");
+        fcHolder.setAttribute("style",
+          "height: calc(100% - " + tray.offsetHeight + "px);" +
+          "height: -webkit-calc(100% - " + tray.offsetHeight + "px);"
+        );
+        editor.codeMirror.refresh();
         Butter = butter;
         $(tray).on("mouseenter", ".butter-track-event", function(e) {
           var target = e.target;
