renamed page title to Webmaker X Prototype

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       right: 0;
     }
     </style>
-    <title>Alternate Publisher Friendlycode Editor</title>
+    <title>Webmaker X Prototype</title>
     <link rel="stylesheet" href="css/friendlycode.css">
   </head>
   <body style="margin: 0">
