--- a/index.html
+++ b/index.html
@@ -102,7 +102,8 @@
         paths: {
           'text': '../external/require/text',
           'jsSHA': '../external/jsSHA',
-          'UAParser': '../external/ua-parser'
+          'UAParser': '../external/ua-parser',
+          'core/popcorn-wrapper': '../../js/media-popcorn-wrapper' 
         }
       });
       butterRequire(["main"], function(Butter) {
