Added a 'preview plugin' architecture.
This makes it easier to support functionality that enhances the preview
area but also needs to talk to the editor, and which may or may not be
running in an environment where the preview frame is in a cross-origin
document.

The only preview plugin right now is the 'source-higlighter', aka
x-ray goggles effect.

--- a/examples/sandboxed-preview/index.html
+++ b/examples/sandboxed-preview/index.html
@@ -78,6 +78,19 @@
         });
         self.channelToPreview = channel;
 
+        self.loadPlugin = function(plugin) {
+          plugin.initEditorSide(self, self.channelToPreview);
+          channel.call({
+            method: "loadPlugin",
+            params: plugin.id,
+            error: function(e) {
+              if (window.console)
+                window.console.log("loadPlugin() error", e);
+            },
+            success: function() {}
+          });
+        };
+        
         BackboneEvents.mixin(self);
         return self;
       };
